tests/fixtures/valid/variant_match.gcl
// variant_match.gcl -- Match expressions on loop variables (index variants)
pub index Maneuver = { Departure, Correction, Insertion };

param delta_v: Velocity[Maneuver] = {
    Maneuver.Departure: 2.46 km/s,
    Maneuver.Correction: 0.12 km/s,
    Maneuver.Insertion: 1.83 km/s,
};

// Variant-specific scaling extracted to param (match not allowed in nodes)
param scale_factor: Dimensionless[Maneuver] = {
    Maneuver.Departure: 2.0,
    Maneuver.Correction: 0.5,
    Maneuver.Insertion: 1.5,
};

// Use param result in computation
node scaled_dv: Velocity[Maneuver] = for m: Maneuver { @delta_v[m] * @scale_factor[m] };

// Match with multi-binding for comprehension
pub index Phase = { Coast, Burn };

param base_cost: Velocity[Maneuver, Phase] = {
    (Maneuver.Departure, Phase.Coast): 0.0 m/s,
    (Maneuver.Departure, Phase.Burn): 2.46 km/s,
    (Maneuver.Correction, Phase.Coast): 0.0 m/s,
    (Maneuver.Correction, Phase.Burn): 0.12 km/s,
    (Maneuver.Insertion, Phase.Coast): 0.0 m/s,
    (Maneuver.Insertion, Phase.Burn): 1.83 km/s,
};

// Phase-specific multiplier extracted to param (match not allowed in nodes)
param phase_multiplier: Dimensionless[Phase] = {
    Phase.Coast: 0.0,
    Phase.Burn: 1.1,
};
node adjusted_cost: Velocity[Maneuver, Phase] = for m: Maneuver, p: Phase {
    @base_cost[m, p] * @phase_multiplier[p]
};
