tests/fixtures/errors/missing_variants.gcl
pub index Maneuver = { Departure, Correction, Insertion };
param dv: Velocity[Maneuver] = {
    Maneuver::Departure: 2.46 km/s,
    Maneuver::Correction: 0.5 km/s,
};
